[Issue 41][Added overflow: scroll so that overflow content becomes visible]

--- a/vITalAngular/src/app/views/patient-overview/patient-overview.component.css
+++ b/vITalAngular/src/app/views/patient-overview/patient-overview.component.css
@@ -126,13 +126,14 @@ input[type=radio] {
     position: relative;
     height: 100%;
     width: 100%;
+    overflow:scroll;
    /* padding: 0px 0px 62px 0px; */
 
 }
 
 .wrappar {
+    overflow: scroll;
     position: relative;
     height: 100%;
     width: 100%;
-
 }
